# embucket

./: .check-license.config.json  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  check_license.sh  deny.toml  rest-catalog-open-api.yaml  rest_examples.http
crates/api-iceberg-rest/: Cargo.toml  README.md
crates/api-iceberg-rest/src/: error.rs  handlers.rs  lib.rs  router.rs  schemas.rs  state.rs
crates/api-internal-rest/: Cargo.toml  README.md
crates/api-internal-rest/src/: error.rs  handlers.rs  lib.rs  router.rs  state.rs
crates/api-sessions/: Cargo.toml  README.md
crates/api-sessions/src/: lib.rs  session.rs
crates/api-snowflake-rest/: Cargo.toml  README.md
crates/api-snowflake-rest/src/: error.rs  handlers.rs  router.rs  schemas.rs  state.rs
crates/api-ui/: Cargo.toml  README.md
crates/api-ui/src/: config.rs  error.rs  layers.rs  lib.rs  router.rs  state.rs  test_server.rs
crates/api-ui/src/auth/: error.rs  handlers.rs  layer.rs  mod.rs  models.rs  router.rs
crates/api-ui/src/dashboard/: error.rs  handlers.rs  models.rs
crates/api-ui/src/databases/: error.rs  handlers.rs  models.rs
crates/api-ui/src/navigation_trees/: error.rs  handlers.rs  models.rs
crates/api-ui/src/queries/: error.rs  handlers.rs  models.rs
crates/api-ui/src/schemas/: error.rs  handlers.rs  models.rs
crates/api-ui/src/tables/: error.rs  handlers.rs  models.rs
crates/api-ui/src/tests/: auth.rs  common.rs  dashboard.rs  databases.rs  mod.rs  navigation_trees.rs  queries.rs  schemas.rs  server.rs  tables.rs  volumes.rs  worksheets.rs
crates/api-ui/src/volumes/: error.rs  handlers.rs  models.rs
crates/api-ui/src/web_assets/: config.rs  error.rs  handler.rs  mod.rs  router.rs  server.rs
crates/api-ui/src/worksheets/: error.rs  handlers.rs  mod.rs  models.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: error.rs  lib.rs  models.rs  repository.rs  service.rs
crates/control_plane/: Cargo.toml
crates/control_plane/src/: error.rs  lib.rs  models.rs  repository.rs  service.rs  utils.rs
crates/control_plane/src/models/: error.rs  mod.rs
crates/control_plane/src/repository/: mod.rs
crates/control_plane/src/sql/: context.rs  error.rs  execution.rs  mod.rs  planner.rs  sql.rs
crates/core-executor/: Cargo.toml  README.md
crates/core-executor/src/: dedicated_executor.rs  error.rs  lib.rs  models.rs  query.rs  service.rs  session.rs  txt  utils.rs
crates/core-executor/src/datafusion/: analyzer.rs  error.rs  extension_planner.rs  mod.rs  planner.rs  query_planner.rs  type_planner.rs
crates/core-executor/src/snapshots/: core_executor__session__tests__create_table_and_insert.snap
crates/core-executor/src/tests/: mod.rs  query.rs  service.rs  table_setup.sql
crates/core-history/: Cargo.toml  README.md
crates/core-history/src/: errors.rs  history_store.rs  lib.rs  recording_service.rs  store.rs
crates/core-history/src/entities/: mod.rs  query.rs  result_set.rs  worksheet.rs  worksheet_query_ref.rs
crates/core-metastore/: Cargo.toml  README.md
crates/core-metastore/src/: error.rs  metastore.rs
crates/core-metastore/src/models/: database.rs  schema.rs  table.rs  volumes.rs
crates/core-metastore/src/snapshots/: core_metastore__metastore__tests__create_database.snap  core_metastore__metastore__tests__create_volumes.snap  core_metastore__metastore__tests__duplicate_volume.snap  core_metastore__metastore__tests__temporary_tables.snap
crates/df-builtins/: Cargo.toml  README.md
crates/df-builtins/src/: array_flatten.rs  array_to_string.rs  booland.rs  boolor.rs  boolxor.rs  convert_timezone.rs  date_add.rs  date_diff.rs  date_from_parts.rs  equal_null.rs  get.rs  get_path.rs  iff.rs  insert.rs  is_array.rs  is_object.rs  is_typeof.rs  json.rs  lib.rs  nullifzero.rs  object_keys.rs  parse_json.rs  rtrimmed_length.rs  strtok_to_array.rs  time_from_parts.rs  timestamp_from_parts.rs  to_boolean.rs  to_time.rs  try_parse_json.rs  typeof_func.rs
crates/df-builtins/src/aggregate/: array_unique_agg.rs  booland_agg.rs  boolor_agg.rs  boolxor_agg.rs  mod.rs  object_agg.rs  percentile_cont.rs
crates/df-builtins/src/geospatial/: data_types.rs
crates/df-builtins/src/session/: last_query_id.rs  mod.rs
crates/df-builtins/src/session_context/: mod.rs
crates/df-builtins/src/table/: flatten.rs  mod.rs
crates/df-builtins/src/tests/: mod.rs  query.rs  utils.rs
crates/df-builtins/src/variant/: array_append.rs  array_cat.rs  array_compact.rs  array_construct.rs  array_contains.rs  array_distinct.rs  array_except.rs  array_generate_range.rs  array_insert.rs  array_intersection.rs  array_max.rs  array_min.rs  array_position.rs  array_prepend.rs  array_remove.rs  array_remove_at.rs  array_reverse.rs  array_size.rs  array_slice.rs  array_sort.rs  arrays_overlap.rs  arrays_to_object.rs  arrays_zip.rs  as_func.rs  mod.rs  object_construct.rs  object_delete.rs  object_insert.rs  object_pick.rs  to_array.rs  (+1 more)
crates/df-catalog/: Cargo.toml  README.md
crates/df-catalog/src/: catalog.rs  catalog_list.rs  error.rs  lib.rs  schema.rs
crates/embucket-functions/: Cargo.toml  README.md
crates/embucket-functions/docs/: function_implementation_guide.md
crates/embucket-functions/src/: lib.rs  scalar_template.rs  utils.rs
crates/embucket-seed/: Cargo.toml  README.md
crates/embucket-seed/src/: external_models.rs  lib.rs  static_seed_assets.rs  tests.rs
crates/embucket-seed/templates/: extreme_seed.yaml  minimal_seed.yaml  typical_seed.yaml
crates/embucketd/: Cargo.toml  README.md  TRACING_AND_PROFILING.md
crates/embucketd/src/: cli.rs  main.rs
crates/history/: Cargo.toml
crates/history/src/: history_store.rs  lib.rs  store.rs
crates/metastore/: Cargo.toml
crates/metastore/src/: error.rs  lib.rs  metastore.rs
crates/nexus/: Cargo.toml
crates/nexus/src/: error.rs  lib.rs  main.rs  router.rs  state.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: iterable.rs  lib.rs  list_config.rs  scan_iterator.rs
(+3829 files in other folders)
