[workspace]
default-members = ["bin/bucketd"]
members = [
  "bin/bucketd",
  "crates/catalog",
  "crates/control_plane",
  "crates/nexus",
  "crates/runtime",
  "crates/utils",
]
resolver = "2"
package.license = "Apache-2.0"
package.license-file = "LICENSE"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3" }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-macros = "0.5"
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1.84" }
serde = { version = "1.0", features = ["derive"] }
slatedb = { version = "0.2.0" }
bytes = { version = "1" }
object_store = { version = "0.11.1", features = ["aws", "gcp", "azure"] }
serde_json = "1.0"
serde_yaml = "0.9"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1.0"
iceberg = { git = "https://github.com/hansetag/iceberg-rust.git", branch = "ct/builder-upstream-20241002" }
tempfile = { version = "3" }
utoipa = { version = "5.3.1", features = ["uuid", "chrono"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
lazy_static = { version = "1.5" }
snafu = { version = "0.8.5", features = ["futures"] }
tracing = { version = "0.1" }

datafusion = { version = "45.0.0" }
datafusion-common = { version = "45.0.0" }
datafusion-expr = { version = "45.0.0" }
datafusion-physical-plan = { version = "45.0.0" }

# do not change iceberg-rust, datafusion-functions-json hash commits unless datafusion version bumped
datafusion-functions-json = { git = "https://github.com/Embucket/datafusion-functions-json.git", rev = "f2b9b88cd9b4282bc0286a970333e8c01cec177b" }
iceberg-rust = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "a9da1c26cf5b0e91aba33e6088dd02ff67c32928" }
iceberg-rest-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "a9da1c26cf5b0e91aba33e6088dd02ff67c32928" }
datafusion_iceberg = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "a9da1c26cf5b0e91aba33e6088dd02ff67c32928" }

[patch.crates-io]
datafusion = { git = "https://github.com/Embucket/datafusion.git", rev = "314a72634dc4f15242345fd17dc32df6c3ae04e8" }
datafusion-common = { git = "https://github.com/Embucket/datafusion.git", rev = "314a72634dc4f15242345fd17dc32df6c3ae04e8" }
datafusion-expr = { git = "https://github.com/Embucket/datafusion.git", rev = "314a72634dc4f15242345fd17dc32df6c3ae04e8" }
datafusion-physical-plan = { git = "https://github.com/Embucket/datafusion.git", rev = "314a72634dc4f15242345fd17dc32df6c3ae04e8" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 1 }
as_conversions = "warn"
nursery = { level = "warn", priority = 1 }
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
similar_names = { level = "allow", priority = 2 }

# These should be removed eventually
missing_errors_doc = { level = "allow", priority = 2 }
missing_panics_doc = { level = "allow", priority = 2 }
significant_drop_tightening = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
