[workspace]
default-members = ["bin/bucketd"]
members = [
  "bin/bucketd",
  "crates/metastore",
  "crates/history",
  "crates/runtime",
  "crates/utils",
]
resolver = "2"
package.license-file = "LICENSE"

[workspace.dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
futures = { version = "0.3" }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-macros = "0.5"
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1.84" }
serde = { version = "1.0", features = ["derive"] }
slatedb = { version = "0.4.0" }
bytes = { version = "1.8.0" }
snmalloc-rs = { version = "0.3" }
object_store = { version = "0.11.1", features = ["aws", "gcp", "azure"] }
serde_json = "1.0"
serde_yaml = "0.9"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1.0"
iceberg = { git = "https://github.com/hansetag/iceberg-rust.git", branch = "ct/builder-upstream-20241002" }
tempfile = { version = "3" }
utoipa = { version = "5.3.1", features = ["uuid", "chrono"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
lazy_static = { version = "1.5" }
snafu = { version = "0.8.5", features = ["futures"] }
tracing = { version = "0.1" }
icebucket_history = { version = "0.1.0", path = "crates/history" }

datafusion = { version = "45.0.0" }
datafusion-common = { version = "45.0.0" }
datafusion-expr = { version = "45.0.0" }
datafusion-physical-plan = { version = "45.0.0" }
datafusion-doc = { version = "45.0.0" }
datafusion-macros = { version = "45.0.0" }

datafusion-functions-json = { git = "https://github.com/Embucket/datafusion-functions-json.git", rev = "f2b9b88cd9b4282bc0286a970333e8c01cec177b" }
iceberg-rust = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "8b57339b0df82a5dddc7d489bd6ab3ea2a7d6d1d" }
iceberg-rust-spec = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "8b57339b0df82a5dddc7d489bd6ab3ea2a7d6d1d" }
iceberg-rest-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "8b57339b0df82a5dddc7d489bd6ab3ea2a7d6d1d" }
iceberg-s3tables-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "8b57339b0df82a5dddc7d489bd6ab3ea2a7d6d1d" }
datafusion_iceberg = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "8b57339b0df82a5dddc7d489bd6ab3ea2a7d6d1d" }

[patch.crates-io]
datafusion = { git = "https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-common = { git = "https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-expr = { git = "https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-physical-plan = { git = "https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-doc = { git = "https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }
datafusion-macros = { git = "https://github.com/Embucket/datafusion.git", rev = "eecc47ec20fec83158bd71611e799cb7d373646f" }

# issue #309
chrono = { git = "https://github.com/chronotope/chrono.git", rev = "8b863490d88ba098038392c8aa930012ffd0c439" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 1 }
as_conversions = "warn"
nursery = { level = "warn", priority = 1 }
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
similar_names = { level = "allow", priority = 2 }

# These should be removed eventually
missing_errors_doc = { level = "allow", priority = 2 }
missing_panics_doc = { level = "allow", priority = 2 }
significant_drop_tightening = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
option_if_let_else = { level = "allow", priority = 2 }

