[package]
name = "api-internal-rest"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
core-metastore = { path = "../core-metastore" }
core-utils = { path = "../core-utils" }

axum = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
