[package]
name = "api-sessions"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
core-executor = { path = "../core-executor" }

async-trait = { workspace = true }
axum = { workspace = true }
tower-sessions = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
