[package]
name = "catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
iceberg = { workspace = true }
control_plane = { path = "../control_plane" }
thiserror = { workspace = true }
utils = { path = "../utils" }
futures = { workspace = true }
slatedb = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
object_store = { workspace = true }
url = "2.5.2"
chrono = "0.4.38"

[dev-dependencies]