[package]
name = "control_plane"
version = "0.1.0"
edition = "2021"

[dependencies]

arrow = { version = "54.1.0" }
arrow-json = { version = "54.1.0" }
async-trait = { workspace = true }
base64 = { version = "0.22.1" }
bytes = { version = "1.8.0" }

chrono = { workspace = true }

datafusion = { git = "https://github.com/Embucket/datafusion.git", rev = "2950e0be59f81fbd6593f7457f1f03e63a292820" }
datafusion-common = { git = "https://github.com/Embucket/datafusion.git", rev = "2950e0be59f81fbd6593f7457f1f03e63a292820" }
datafusion-expr = { git = "https://github.com/Embucket/datafusion.git", rev = "2950e0be59f81fbd6593f7457f1f03e63a292820" }
datafusion-functions-json = { git = "https://github.com/Embucket/datafusion-functions-json.git", rev = "a5bbbd1266447c26f3bfdb5314b4a326796bc784" }
datafusion_iceberg = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "f2fef1d973f59309919d60aaaa32e83e04029d6d" }
flatbuffers = { version = "24.3.25" }
futures = { workspace = true }
iceberg-rest-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "f2fef1d973f59309919d60aaaa32e83e04029d6d" }
iceberg-rust = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "f2fef1d973f59309919d60aaaa32e83e04029d6d" }
icelake = { git = "https://github.com/Embucket/icelake.git", rev = "b4cbcaf" }

object_store = { workspace = true }
once_cell = "1.19.0"
quick-xml = { version = "0.36.2" }
regex = { version = "1.11.0" }
runtime = { path = "../runtime" }
rusoto_core = { version = "0.48.0" }
rusoto_credential = { version = "0.48.0" }
rusoto_s3 = { version = "0.48.0" }
serde = { workspace = true }
serde_json = "1.0.128"
snafu = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { workspace = true }
tracing = { version = "0.1" }
url = { version = "2.5.2" }
utils = { path = "../utils" }
uuid = { workspace = true }

[dev-dependencies]
slatedb = { workspace = true }

[lints]
workspace = true
