[package]
name = "control_plane"
version = "0.1.0"
edition = "2021"

[dependencies]

arrow = { version = "54.1.0" }
arrow-json = { version = "54.1.0" }
async-trait = { workspace = true }
base64 = { version = "0.22.1" }
bytes = { version = "1.8.0" }

chrono = { workspace = true }

datafusion = { git = "https://github.com/Embucket/datafusion.git", rev = "314a72634dc4f15242345fd17dc32df6c3ae04e8" }
datafusion-common = { git = "https://github.com/Embucket/datafusion.git", rev = "314a72634dc4f15242345fd17dc32df6c3ae04e8" }
datafusion-expr = { git = "https://github.com/Embucket/datafusion.git", rev = "314a72634dc4f15242345fd17dc32df6c3ae04e8" }
datafusion-physical-plan = { git = "https://github.com/Embucket/datafusion.git", rev = "314a72634dc4f15242345fd17dc32df6c3ae04e8" }

flatbuffers = { version = "24.3.25" }
futures = { workspace = true }
iceberg-rust = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "17d76a0ecc4ebaa2bfc5178e6589f76dc5d71c67" }
iceberg-rest-catalog = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "17d76a0ecc4ebaa2bfc5178e6589f76dc5d71c67" }
datafusion_iceberg = { git = "https://github.com/Embucket/iceberg-rust.git", rev = "17d76a0ecc4ebaa2bfc5178e6589f76dc5d71c67" }

icelake = { git = "https://github.com/Embucket/icelake.git", rev = "b4cbcaf" }

datafusion-functions-json = { git = "https://github.com/Embucket/datafusion-functions-json.git", rev = "86f5294d30b7bf53fbcb2e25dee409ad818b34cc" }

object_store = { workspace = true }
once_cell = "1.19.0"
quick-xml = { version = "0.36.2" }
regex = { version = "1.11.0" }
runtime = { path = "../runtime" }
rusoto_core = { version = "0.48.0" }
rusoto_credential = { version = "0.48.0" }
rusoto_s3 = { version = "0.48.0" }
serde = { workspace = true }
serde_json = "1.0.128"
snafu = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { workspace = true }
tracing = { version = "0.1" }
url = { version = "2.5.2" }
utils = { path = "../utils" }
uuid = { workspace = true }

[dev-dependencies]
slatedb = { workspace = true }

[lints]
workspace = true
