[package]
name = "control_plane"
version = "0.1.0"
edition = "2021"
license = {workspace = true}
license-file = {workspace = true}

[dependencies]

arrow = { version = "54.1.0" }
arrow-json = { version = "54.1.0" }
async-trait = { workspace = true }
base64 = { version = "0.22.1" }
bytes = { version = "1.8.0" }

chrono = { workspace = true }

datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-json = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion_iceberg = { workspace = true }

futures = { workspace = true }
iceberg-rest-catalog = { workspace = true }
iceberg-rust = { workspace = true }

icelake = { git = "https://github.com/Embucket/icelake.git", rev = "b4cbcaf" }

object_store = { workspace = true }
once_cell = "1.19.0"
quick-xml = { version = "0.36.2" }
regex = { version = "1.11.0" }
runtime = { path = "../runtime" }
rusoto_core = { version = "0.48.0" }
rusoto_credential = { version = "0.48.0" }
rusoto_s3 = { version = "0.48.0" }
serde = { workspace = true }
serde_json = "1.0.128"
snafu = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { workspace = true }
tracing = { version = "0.1" }
url = { version = "2.5.2" }
utils = { path = "../utils" }
uuid = { workspace = true }

[dev-dependencies]
slatedb = { workspace = true }

[lints]
workspace = true
