[package]
name = "core-history"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
core-utils = { path = "../core-utils" }
core-executor = { path = "../core-executor" }
core-metastore = { path = "../core-metastore" }

bytes = { workspace = true }
datafusion = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
slatedb = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
object_store = { workspace = true }
mockall = "0.13.1"

[lints]
workspace = true
