[package]
name = "core-metastore"
version = "0.1.0"
edition = "2021"
license-file = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-rust-spec = { workspace = true }
core-utils = { path = "../core-utils" }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slatedb = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml", "filters", "redactions"] }

[lints]
workspace = true
