[package]
name = "icebucket_history"
version = "0.1.0"
edition = "2021"
license-file = { workspace = true }

[dependencies]
icebucket_utils = { path = "../utils" }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
slatedb = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
object_store = { workspace = true }

[lints]
workspace = true
