[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[build-dependencies]
utoipa = { workspace = true }

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
tokio = { workspace = true }
control_plane = { path = "../control_plane" }
catalog = { path = "../catalog" }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
iceberg = { workspace = true }
slatedb = { workspace = true }
object_store = { workspace = true }
object_store_for_slatedb = { package = "object_store", version = "0.11.1" }
utils = { path = "../utils" }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
dotenv = { workspace = true }
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
validator = { version = "0.18.1", features = ["derive"] }
thiserror = { version = "1.0.63" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "1.5.0"
http-body-util = "0.1.0"
anyhow = "1.0.89"
tower-http = { version = "0.6.1", features = ["catch-panic", "timeout", "sensitive-headers", "cors"] }

[dev-dependencies]
tower = { workspace = true }
async-trait = { workspace = true }
http-body-util = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }
