[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[build-dependencies]
utoipa = { workspace = true }

[dependencies]
arrow = { version = "53" }
axum = { workspace = true }
axum-macros = { workspace = true }
tokio = { workspace = true }
control_plane = { path = "../control_plane" }
catalog = { path = "../catalog" }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
iceberg = { workspace = true }
indexmap = { version = "2.7.0" }
slatedb = { workspace = true, version = "0.3.0" }
object_store = { workspace = true }
utils = { path = "../utils" }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
validator = { version = "0.18.1", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "1.5.0"
http-body-util = "0.1.0"
anyhow = "1.0.89"
tower-http = { version = "0.6.1", features = ["catch-panic", "timeout", "sensitive-headers", "cors", "trace"] }
lazy_static = { version = "1.4.0" }
flate2 = { version = "1.0.34" }
regex = { version = "1.11.0" }
snafu = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
async-trait = { workspace = true }
http-body-util = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }

[lints]
workspace = true